Task #96:  #96: Handbook's text is unreadably small. Fix.

--- a/css/styles.css
+++ b/css/styles.css
@@ -845,7 +845,7 @@ tr:first-child th:first-child {
 
 @media only screen and (min-width: 768px) {
     body {
-        font-size: 15px;
+        font-size: 18px;
     }
 
     header.primary .branding {
@@ -890,7 +890,7 @@ tr:first-child th:first-child {
 
 @media only screen and (min-width: 1024px) {
     body {
-        font-size: 16px;
+        font-size: 18px;
     }
 
     .header_container {
